[package]
name = "dove"
version = "0.1.0"
authors = ["Qiwen Hua <qiwen.hua@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dove-core = { path = "dove-core" }
colour = "0.5.0"
chrono = "0.4.11"

[workspace]
members = ["dove-core", "dove-wasm"]
