[package]
name = "dove"
version = "0.1.0"
authors = ["Qiwen Hua <qiwen.hua@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "dove-core",
    "dove-cli",
    "dove-wasm",
]

[dependencies]
dove-core = { path = "dove-core" }

[lib]
path = "dove-core"
